# robot_cpp

./: CMakeLists.txt  README.md  package.xml
include/: aux_opencv.hpp
include/robot/: actions.hpp  robot.hpp
libs/aux_opencv/: aux_opencv.cpp
libs/robot/: actions.cpp  robot.cpp
src/: main.cpp
src/Auxiliar/: CMakeLists.txt  aux.cpp  aux.h
